--- a/.gitignore
+++ b/.gitignore
@@ -7,43 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependency directories
-node_modules/
-.bun/
-.pnpm-store/
-
-# Build artifacts
-dist-ssr/
-.build/
-.cache/
-.temp/
-*.tsbuildinfo
-
-# Environment files
-.env
-.env.*
-!.env.example
+node_modules
+dist
+dist-ssr
 *.local
 
-# Editor/IDE
-.vscode/
-.idea/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# System Files
-.DS_Store
-Thumbs.db
-
-# Testing
-coverage/
-.nyc_output/
-
-# Package managers
-bun.lockb
-
-# TypeScript
-*.tsbuildinfo
