--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,53 @@
-# Logs
-logs
+# Dependency directories
+node_modules/
+.bun/
+
+# Build artifacts
+dist/
+dist-ssr/
+*.local
+
+# Logs and diagnostics
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+bun.lockb
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# System files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+._*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Debug
+debug/
+*.pdb
+*.idb
+*.ilk
+*.exp
+*.obj
