--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,10 @@ jobs:
         run: npm install
       - name: Build
         run: |
-          npm run build
+          npm run build:pages
           cp 404.html dist/
+        env:
+          NODE_ENV: production
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
