--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,24 @@
-# Dependency directories
-node_modules/
-.bun/
-
-# Build artifacts
-dist/
-dist-ssr/
-*.local
-
-# Logs and diagnostics
-logs/
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-bun.lockb
 
-# Environment files
-.env
-.env.local
-.env.development
-.env.production
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# System files
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-._*
-
-# Testing
-coverage/
-.nyc_output/
-
-# Debug
-debug/
-*.pdb
-*.idb
-*.ilk
-*.exp
-*.obj
